--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-deta==1.1.0
-streamlit==1.10.0
-streamlit_option_menu==0.3.2
-plotly==4.14.3
-python-dotenv ==1.0.0
+deta
+streamlit
+streamlit_option_menu
+plotly
+python-dotenv 
